# degree-project-code

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.in
src/: .wisdom  FFT.cc  FFT.hh  Features.cc  Features.hh  Makefile.am  Makefile.in  Playlist.cc  Playlist.hh  SConstruct  Song.cc  Song.hh  SongSet.cc  SongSet.hh  SoundFile.cc  SoundFile.hh  analysis.c  analysis.h  astylerc  common.h  common.hh  evaluate.rb  extractor.c  extractor.cc  extractor.h  fft.c  fft.h  generator.cc  generator.hh  learner.cc  learner.hh  listenertest.rb  output.c  output.h  similarity_test.sh  snd.c  snd.h  stats.c  stats.h  viewer.cc  (+2 more)
