AC_INIT(src/extractor.c)
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(extractor, 0.1)
AM_CONFIG_HEADER(config.h)

AC_LANG_C
AC_PROG_CC
AC_PROG_CC_STDC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC


AC_CHECK_LIB(sndfile, sf_readf_float, , AC_MSG_ERROR(need libsndfile))
AC_CHECK_LIB(popt, poptGetContext, , AC_MSG_ERROR(need libpopt))
AC_CHECK_LIB(fftw3f, fftwf_plan_r2r_1d, , AC_MSG_ERROR(need fftw3 compiled with --enable-float))

CFLAGS="-Wall -O0 -DDEBUG -g"
AC_SUBST(CFLAGS)


AC_OUTPUT(Makefile src/Makefile)
