
bin_PROGRAMS = extractor

extractor_SOURCES = fft.c snd.c analysis.c output.c extractor.c

extractor_LIBS = -lfftw3f -lsndfile -lpopt

noinst_HEADERS = common.h extractor.h fft.h snd.h analysis.h output.h

# set the include path found by configure
#INCLUDES= $(all_includes)

# the library search path.
#extractor_LDFLAGS = $(all_libraries)
