
bin_PROGRAMS = extractor

extractor_SOURCES = FFT.cc SoundFile.cc Features.cc extractor.cc

extractor_LIBS = -lfftw3f -lsndfile -lpopt

noinst_HEADERS = common.hh FFT.hh SoundFile.hh Features.hh

# set the include path found by configure
#INCLUDES= $(all_includes)

# the library search path.
#extractor_LDFLAGS = $(all_libraries)
